0 height for btm right card logo trying to fix alignment on mobile

--- a/src/components/Ratecard.css
+++ b/src/components/Ratecard.css
@@ -37,6 +37,7 @@
     position: relative;
     left: 80px;
     font-family: serif;
+    top: 0%;
     font-size: 1.5em;
     transform: rotate(180deg);
 }
